# PLONK

./: .gitignore  Cargo.toml
src/: circuit.rs  kzg.rs  main.rs  merkle.rs  poly_utils.rs  prover.rs  state.rs  transcript.rs  verifier.rs
src/plonk/: circuit.rs  constraints.rs  prover.rs  transcript.rs  verifier.rs
