[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-poly-commit = "0.5"
ark-bn254 = "0.5"      
merlin = "3.0"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge"] }
ark-relations = "0.5"
